[package]
name = "block_size"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
subxt = "0.42.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hex = "0.4"
parity-scale-codec = "3"
tokio-tungstenite = { version = "0.21", features = ["rustls"] }
futures-util = "0.3"